# groundstation

./: .gitignore  .mcp.json  CLAUDE.md  README.md  compose.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  live-evals.yml
.ua/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
briefing/: brief.py  fleet.json  run.sh
docs/: adr-local-models.md  architecture.md  examples.md  field-test-2026-07-22-no3.cases.json  field-test-2026-07-22-no3.html  field-test-2026-07-22.cases.json  field-test-2026-07-22.html  field-test.html  rfc-modularity.md  stack.md
evals/: README.md  brief_checks.py  run_evals.py  unit_checks.py
evals/modularity-exp/: collect.sh  rubric.md  runner.sh
evals/modularity-exp/prompts/: central-common.txt  modular-common.txt  questions.txt
scripts/: doctor.sh  field_test.py
selfdoc/: llms.txt
skills/earth-data/: SKILL.md
skills/stac-api/: SKILL.md
skills/titiler/: SKILL.md
src/groundstation/: server.py  stack.py  tools.py  web.py
src/groundstation/static/: index.html
