[project]
name = "groundstation"
version = "0.1.0"
description = "Earth data, agent-ready: an MCP server + Claude skill over the cloud-native geospatial stack (STAC, TiTiler, Gazet)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
groundstation = "groundstation.server:main"
groundstation-web = "groundstation.web:main"

[dependency-groups]
web = ["fastapi>=0.115", "uvicorn>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/groundstation"]
